[gd_scene load_steps=3 format=3 uid="uid://s1t2e3p4c5o6n7f8g"]

[ext_resource type="Script" path="res://scripts/StepConfig.gd" id="1_stepconfig"]

[node name="StepConfig" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_stepconfig")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -80.0
offset_top = 10.0
offset_right = 80.0
offset_bottom = 30.0
grow_horizontal = 2
text = "Step Detection Settings"
horizontal_alignment = 1

[node name="DetectionModeLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -80.0
offset_right = -80.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
text = "Detection Mode:"

[node name="DetectionModeOption" type="OptionButton" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -80.0
offset_right = 180.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
item_count = 2
selected = 0
popup/item_0/text = "Distance"
popup/item_0/id = 0
popup/item_1/text = "Time"
popup/item_1/id = 1

[node name="DistanceThresholdLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -40.0
offset_right = -80.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
text = "Distance Threshold:"

[node name="DistanceThresholdSpinBox" type="SpinBox" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = -40.0
offset_right = 180.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
min_value = 10.0
max_value = 200.0
value = 50.0
suffix = "px"

[node name="TimeThresholdLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = 0.0
offset_right = -80.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Time Threshold:"

[node name="TimeThresholdSpinBox" type="SpinBox" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = 0.0
offset_right = 180.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.1
max_value = 5.0
step = 0.1
value = 0.5
suffix = "s"

[node name="MoveSpeedLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = 40.0
offset_right = -80.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
text = "Move Speed:"

[node name="MoveSpeedSpinBox" type="SpinBox" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = 40.0
offset_right = 180.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
min_value = 50.0
max_value = 500.0
value = 200.0
suffix = "px/s"

[node name="StepGoalLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = 80.0
offset_right = -80.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
text = "Step Goal:"

[node name="StepGoalSpinBox" type="SpinBox" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 80.0
offset_top = 80.0
offset_right = 180.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
min_value = 100.0
max_value = 50000.0
value = 10000.0
step = 100.0
suffix = " steps"

[node name="ApplyButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -40.0
offset_right = 60.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
text = "Apply Settings"

[node name="CloseButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -70.0
offset_right = 60.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
text = "Close"

[node name="ResetButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -100.0
offset_right = 60.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 0
text = "Reset to Defaults"